@@ -1096,7 +1096,7 @@ aspellword	^[ $
 ctrl		^Q		Quote Ctrl chars
        ctrl		`		Quote Ctrl chars
 
-paste			^[ [ 2 0 0 ~		Bracketed paste
+paste			^[ ] 5 2 ; ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
