@@ -1169,7 +1169,7 @@ if,"char==65",then,"it's an A",else,"it's not an a",endif	^[ q
  sequences or which are frequently wrong.  Note that if the termcap entry is
  correct, it will override these later on.
 
-paste			^[ [ 2 0 2 ~		Bracketed paste
+paste			^[ ] 5 2 ; ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
