@@ -1120,7 +1120,7 @@ xtmouse		^[ [ M		Introduces an xterm mouse event
 @SPELL@file	^[ t
 @SPELL@file	^[ ^T
 
-paste			^[ [ 2 0 0 ~		Bracketed paste
+paste			^[ ] 5 2 ; ;		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
